--- a/templates/card.html
+++ b/templates/card.html
@@ -45,13 +45,13 @@
 			<div class="form-group">
 				<div class="col-xs-5 clear-left">
 					<label class="control-label" for="fName">Nom:</label>  
-					<input id="fName" name="fName" type="text" class="form-control" value="{{fname}}" required >
+					<input id="fName" name="fName" type="text" class="form-control" value="{{fName}}" required >
 				</div>	
 			</div>
 			<div class="form-group">			
 				<div class="col-xs-5">
 					<label class="control-label" for="lName">Pernom:</label>  
-					<input id="lName" name="lName" type="text" class="form-control" value="{{fname}}" required>
+					<input id="lName" name="lName" type="text" class="form-control" value="{{lName}}" required>
 				</div>
 			</div>
 
