--- a/templates/cards.html
+++ b/templates/cards.html
@@ -1,39 +1,8 @@
 
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-
-    <title>Card viea </title>
-
-
-    <!-- Custom styles for this template -->
-    <link href="/static/css/signin.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-	  <div class="myhead">
-		<a href="/logout">Logout</a>
-	  </div>
 
 	<div class="container">
 	  
-      <form class="myform" role="form" action="/submit" method="post">
+      <form class="myform" role="form" action="" method="post">
 			
         <div class="page1">
 			<div class="form-group">
@@ -42,7 +11,9 @@
 					<input id="id" name="id" type="text" class="form-control" value="{{id}}" required>
 				</div>	
 			</div>
-			<button class="btn btn-lg btn-edit">Edit</button>
+			{% if existing_card %}
+			<button id="edit" class="btn btn-lg btn-edit">Editer</button>
+			{% endif %}
 			<div class="form-group">
 				<div class="col-xs-5 clear-left">
 					<label class="control-label" for="fName">Nom:</label>  
@@ -51,7 +22,7 @@
 			</div>
 			<div class="form-group">			
 				<div class="col-xs-5">
-					<label class="control-label" for="lName">Pernom:</label>  
+					<label class="control-label" for="lName">Prenom:</label>  
 					<input id="lName" name="lName" type="text" class="form-control" value="{{lName}}" required>
 				</div>
 			</div>
@@ -80,7 +51,7 @@
 			<div class="form-group">
 				<div class="col-xs-5" >
 					<label class="control-label" for="birth_date">Date De Naissance:</label>  
-					<input id="birth_date" name="birth_date" type="date" class="form-control" value="{{birth_date}}" required >
+					<input id="birth_date" name="birth_date" type="date" class="form-control" value="{{birth_date|date:"Y-m-d"}}" required >
 				</div>	
 			</div>
 			
@@ -121,8 +92,8 @@
 			</div>
 			<div class="form-group">
 				<div class="col-xs-5 clear-left	">
-					<label class="control-label" for="blodTyoe">Groupe Sanguin:</label>  
-					<input id="blodTyoe" name="blodType" type="text" class="form-control" value="{{blodTyoe}}" required>
+					<label class="control-label" for="blodType">Groupe Sanguin:</label>  
+					<input id="blodType" name="blodType" type="text" class="form-control" value="{{blodType}}" required>
 				</div>	
 			</div>
 			
@@ -364,8 +335,11 @@
 			</div>
 			
 		</div>
-		<button class="btn btn-lg btn-primary col-xs-6" type="submit">Save</button>
-		<button class="btn btn-lg btn-cancel">Cancel</button>
+		{% if existing_card %}
+			<button id="save" class="btn btn-lg btn-primary col-xs-6" type="">Sauvegarder</button>
+		{% else %}
+			<button id="submit" class="btn btn-lg btn-primary col-xs-6" type="">Envoyer</button>
+		{% endif %}
 		
 
 		</form>
@@ -374,41 +348,3 @@
     </div> <!-- /container -->
 
 
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script>
-	$( document ).ready(function() {
-		alert ("ready");
-		makeFormDisable();
-	});
-	$('.btn-cancel').on('click', function() {
-		window.location.replace('/login');
-	});
-	
-	$('.btn-edit').on('click', makeFormEnable());
-	
-	function makeFormDisable() {
-		$("form input, form textarea, form input:radio").each(function()
-			{
-			if (this.nodeName == "INPUT" || this.nodeName == "TEXTAREA" || this.nodeName == "RADIO" ){ 
-				$(this).prop('disabled','disabled') 
-			} 
-		})
-	}
-	
-	function makeFormEnable() {
-		alert ("makeFormEnable");
-		$("form input, form textarea, form input:radio").each(function()
-			{
-			if (this.nodeName == "INPUT" || this.nodeName == "TEXTAREA" || this.nodeName == "RADIO" ){ 
-				$(this).prop('disabled','') 
-			} 
-		})
-	}
-    </script>
-    
-  </body>
-</html>
