chnages ot french, and minor fixes

--- a/static/css/signin.css
+++ b/static/css/signin.css
@@ -169,3 +169,7 @@ hr {
 .has-feedback .form-control-feedback {
 	line-height : 0px;
 	}
+.form-group.required .control-label:after { 
+   content:"*";
+   color:red;
+}
