--- a/templates/card.html
+++ b/templates/card.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-    <title>Card viea </title>
+    <title>La carte santé</title>
 
 
     <!-- Custom styles for this template -->
@@ -27,9 +27,10 @@
 
   <body>
 
-	  <div class="myhead">
-		<a href="/logout">Logout</a>
-	  </div>
+	 <div class="myhead">
+	  <img src="static/images/logo.png" height="50">
+		<a href="/logout">Déconnexion</a>
+	 </div>
 	<div class="container">
 	  
       <form class="myform" role="form" action="/submit" method="post">
@@ -37,88 +38,88 @@
         <div class="page1">
 			<div class="form-group">
 				<div id="card_id" class="col-xs-5 ">
-					<label class="control-label" for="id">Card ID:</label>  
+					<label class="control-label" for="id">Carte ID:</label>  
 					<input id="id" name="id" type="text" class="form-control" value="{{CARD}}"  readonly>
 				</div>	
 			</div>
 			<!--<button class="btn btn-lg btn-edit">Edit</button>-->
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-5 clear-left">
 					<label class="control-label" for="fName">Nom:</label>  
 					<input id="fName" name="fName" type="text" class="form-control" value="{{fName}}" required >
 				</div>	
 			</div>
-			<div class="form-group">			
+			<div class="form-group required">			
 				<div class="col-xs-5">
-					<label class="control-label" for="lName">Pernom:</label>  
+					<label class="control-label" for="lName">Prénom:</label>  
 					<input id="lName" name="lName" type="text" class="form-control" value="{{lName}}" required>
 				</div>
 			</div>
 
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-10">
 					<label class="control-label" for="fName">Adresse:</label>  
 					<input id="address" name="address" type="text" class="form-control" value="{{address}}" required>
 				</div>	
 			</div>
 
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-5" >
-					<label class="control-label" for="tel_home">Tel Domicile:</label>  
+					<label class="control-label" for="tel_home">Tél Domicile:</label>  
 					<input id="tel_home" name="tel_home" type="tel" class="form-control" value="{{tel_home}}" required>
 				</div>	
 			</div>
 
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-5" >
 					<label class="control-label" for="email">Email:</label>  
 					<input id="email" name="email" type="email" class="form-control" value="{{email}}" required>
 				</div>	
 			</div>
 
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-5" >
-					<label class="control-label" for="birth_date">Date De Naissance:</label>  
+					<label class="control-label" for="birth_date">Date de Naissance:</label>  
 					<input id="birth_date" name="birth_date" type="date" class="form-control" value="{{birth_date}}" required >
 				</div>	
 			</div>
 			
 
-			<div class="form-group ">
+			<div class="form-group required">
 				<div class="col-xs-5 clear-left" >
-					<label class="control-label" for="ref_doctor_name">Medicin Refrent Dr.:</label>  
-					<input id="ref_doctor_name" name="ref_doctor_name" type="text" class="form-control" value="{{ref_doctor_name}}" >
+					<label class="control-label" for="ref_doctor_name">Médecin Référent Dr.:</label>  
+					<input id="ref_doctor_name" name="ref_doctor_name" type="text" class="form-control" value="{{ref_doctor_name}}" required >
 				</div>	
 			</div>
 			
 			<div class="form-group">
 				<div class="col-xs-5">
-					<label class="control-label" for="ref_doctor_tel">Tel:</label>  
+					<label class="control-label" for="ref_doctor_tel">Tél:</label>  
 					<input id="ref_doctor_tel" name="ref_doctor_tel" type="tel" class="form-control" value="{{ref_doctor_tel}}" >
 				</div>	
 			</div>
 
 			<div class="form-group ">
 				<div class="col-xs-5 clear-left" >
-					<label class="control-label" for="spec_doctor_name">Medicin Specialiste Dr.:</label>  
+					<label class="control-label" for="spec_doctor_name">Médecin Spécialiste Dr.:</label>  
 					<input id="spec_doctor_name" name="spec_doctor_name" type="text" class="form-control" value="{{spec_doctor_name}}" >
 				</div>	
 			</div>
 			
 			<div class="form-group">
 				<div class="col-xs-5">
-					<label class="control-label" for="spec_doctor_tel">Tel:</label>  
+					<label class="control-label" for="spec_doctor_tel">Tél:</label>  
 					<input id="spec_doctor_tel" name="spec_doctor_tel" type="tel" class="form-control" value="{{spec_doctor_tel}}" >
 				</div>	
 			</div>
 
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-5">
-					<label class="control-label" for="id_number">No Secu:</label>  
+					<label class="control-label" for="id_number">No Sécu:</label>  
 					<input id="id_number" name="id_number" type="text" class="form-control" value="{{id_number}}" required>
 				</div>	
 			</div>
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-5 clear-left	">
 					<label class="control-label" for="blodTyoe">Groupe Sanguin:</label>  
 					<input id="blodTyoe" name="blodType" type="text" class="form-control" value="{{blodTyoe}}" required>
@@ -128,151 +129,138 @@
 			<div class="form-group">
 				<div class="col-xs-5">
 					<label class="control-label" for="mutual">Mutuelle:</label>  
-					<input id="mutual" name="mutual" type="text" class="form-control" value="{{mutual}}" required>
+					<input id="mutual" name="mutual" type="text" class="form-control" value="{{mutual}}">
 				</div>	
 			</div>
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-5">
-					<label class="control-label" for="emergency_contact_name">Personne a Contacter (urgence):</label>  
+					<label class="control-label" for="emergency_contact_name">Personne à contacter (urgence):</label>  
 					<input id="emergency_contact_name" name="emergency_contact_name" type="text" class="form-control" value="{{emergency_contact_name}}" required>
 				</div>	
 			</div>
-			<div class="form-group">
+			<div class="form-group required">
 				<div class="col-xs-5">
-					<label class="control-label" for="emergency_contact_tel">Tel:</label>  
+					<label class="control-label" for="emergency_contact_tel">Tél:</label>  
 					<input id="emergency_contact_tel" name="emergency_contact_tel" type="tel" class="form-control" value="{{emergency_contact_tel}}" required>
 				</div>	
 			</div>
 			
 		</div>
         <div class="page2">
-		<h2>Pathalogie Medicale:</h2>
+		<h2>Pathalogie:</h2>
 			<div class="form-group">
 				<div class="col-xs-2">
 					<label class="control-label" for="cardio">Cardiaque</label>  
 				</div>	
 				<div class="radio-inline col-xs-1">
 					<input id="cardio" name="cardio" type="radio"  value="Yes"   {% if cardio %} checked {% endif %}>
-					<label>yes</label>
+					<label>Oui</label>
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="cardio" name="cardio" type="radio"  value="No" {% if not cardio  %} checked {% endif %}>
-					<label>No</label>
+					<label>Non</label>
 				</div>	
-				<div id="info" class="form-group col-xs-6">
+<!--			<div id="info" class="form-group col-xs-6">
 					<input type="text" id="cardio_info" name="cardio_info" class="form-control" value="{{cardio_info}}">  
 				</div>	
-			</div>
+-->			</div>
 		
 			<div class="form-group">
-				<div class="col-xs-2">
-					<label class="control-label" for="cardio">Pulmonaire</label>  
+				<div class="col-xs-2 clear-left">
+					<label class="control-label" for="lung">Pulmonaire</label>  
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="lung" name="lung" type="radio"  value="Yes" {% if lung %} checked {% endif %}>
-					<label>yes</label>
+					<label>Oui</label>
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="lung" name="lung" type="radio"  value="No" {% if not lung %} checked {% endif %}>
-					<label>No</label>
+					<label>Non</label>
 				</div>	
 			</div>
 
 			<div class="form-group">
 				<div class="col-xs-2 clear-left">
-					<label class="control-label" for="cardio">Renale</label>  
+					<label class="control-label" for="kidney">Rénale</label>  
 				</div>	
 				<div class="radio-inline col-xs-1">	
-					<input id="kidney" name="kidney" type="radio"  value="yes" {% if kidney %} checked {% endif %}>
-					<label>yes</label>
+					<input id="kidney" name="kidney" type="radio"  value="Yes" {% if kidney %} checked {% endif %}>
+					<label>Oui</label>
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="kidney" name="kidney" type="radio"  value="No" {% if not kidney %} checked {% endif %}>
-					<label>No</label>
+					<label>Non</label>
 				</div>	
 			</div>
 
 			<div class="form-group">
 				<div class="col-xs-2 clear-left">
-					<label class="control-label" for="cardio">Digestive</label>  
+					<label class="control-label" for="digestive">Digestive</label>  
 				</div>	
 				<div class="radio-inline col-xs-1">	
-					<input id="digestive" name="digestive" type="radio"  value="yes" {% if digestive %} checked {% endif %}>
-					<label>yes</label>
+					<input id="digestive" name="digestive" type="radio"  value="Yes" {% if digestive %} checked {% endif %}>
+					<label>Oui</label>
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="digestive" name="digestive" type="radio"  value="No" {% if not digestive %} checked {% endif %}>
-					<label>No</label>
+					<label>Non</label>
 				</div>	
 			</div>
 
 			<div class="form-group">
 				<div class="col-xs-2 clear-left">
-					<label class="control-label" for="cardio">Neurologique</label>  
+					<label class="control-label" for="neurologic">Neurologique</label>  
 				</div>	
 				<div class="radio-inline col-xs-1">	
-					<input id="neurologic" name="neurologic" type="radio"  value="yes" {% if neurologic %} checked {% endif %}>
-					<label>yes</label>
+					<input id="neurologic" name="neurologic" type="radio"  value="Yes" {% if neurologic %} checked {% endif %}>
+					<label>Oui</label>
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="neurologic" name="neurologic" type="radio"  value="No" {% if not neurologic %} checked {% endif %}>
-					<label>No</label>
+					<label>Non</label>
 				</div>	
 			</div>
 
 			<div class="form-group">
 				<div class="col-xs-2 clear-left">
-					<label class="control-label" for="cardio">Oculaire</label>  
+					<label class="control-label" for="eye">Oculaire</label>  
 				</div>	
 				<div class="radio-inline col-xs-1">	
-					<input id="eye" name="eye" type="radio"  value="yes" {% if eye %} checked {% endif %}>
-					<label>yes</label>
+					<input id="eye" name="eye" type="radio"  value="Yes" {% if eye %} checked {% endif %}>
+					<label>Oui</label>
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="eye" name="eye" type="radio"  value="No" {% if not eye %} checked {% endif %}>
-					<label>No</label>
+					<label>Non</label>
 				</div>	
 			</div>
 			
 			<div class="form-group">
 				<div class="col-xs-2 clear-left">
-					<label class="control-label" for="cardio">Cutanee</label>  
+					<label class="control-label" for="skin">Cutanée</label>  
 				</div>	
 				<div class="radio-inline col-xs-1">	
-					<input id="skin" name="skin" type="radio"  value="yes" {% if skin %} checked {% endif %}>
-					<label>yes</label>
+					<input id="skin" name="skin" type="radio"  value="Yes" {% if skin %} checked {% endif %}>
+					<label>Oui</label>
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="skin" name="skin" type="radio"  value="No" {% if not skin %} checked {% endif %}>
-					<label>No</label>
+					<label>Non</label>
 				</div>	
 			</div>
 
-			<div class="form-group">
-				<div class="col-xs-2 clear-left">
-					<label class="control-label" for="cardio">Autre</label>  
-				</div>	
-				<div class="radio-inline col-xs-1">	
-					<input id="other" name="other" type="radio"  value="yes" {% if other %} checked {% endif %}>
-					<label>yes</label>
-				</div>	
-				<div class="radio-inline col-xs-1">	
-					<input id="other" name="other" type="radio"  value="No" {% if not other %} checked {% endif %}>
-					<label>No</label>
-				</div>	
-			</div>
 
 			<div class="form-group clear-left">
 				<div class="col-xs-2">
-					<label class="control-label" for="cardio">Allergie</label>  
+					<label class="control-label" for="allergy">Allergie</label>  
 				</div>	
 				<div class="radio-inline col-xs-1">	
-					<input id="allergy" name="allergy" type="radio"  value="yes" {% if allergy %} checked {% endif %}>
-					<label>yes</label>
+					<input id="allergy" name="allergy" type="radio"  value="Yes" {% if allergy %} checked {% endif %}>
+					<label>Oui</label>
 				</div>	
 				<div class="radio-inline col-xs-1">	
 					<input id="allergy" name="allergy" type="radio"  value="No" {% if not allergy %} checked {% endif %}>
-					<label>No</label>
+					<label>Non</label>
 				</div>	
 				<div id="info" class="form-group col-xs-6">
 					<input type="text" id="allergy_info" name="allergy_info" class="form-control" value="{{allergy_info}}">  
@@ -280,8 +268,25 @@
 			</div>
 			
 			<div class="form-group">
+				<div class="col-xs-2 clear-left">
+					<label class="control-label" for="other">Autre</label>  
+				</div>	
+				<div class="radio-inline col-xs-1">	
+					<input id="other" name="other" type="radio"  value="Yes" {% if other %} checked {% endif %}>
+					<label>Oui</label>
+				</div>	
+				<div class="radio-inline col-xs-1">	
+					<input id="other" name="other" type="radio"  value="No" {% if not other %} checked {% endif %}>
+					<label>Non</label>
+				</div>	
+					<div id="info" class="form-group col-xs-6">
+					<input type="text" id="other_info" name="cardio_info" class="form-control" value="{{other_info}}">  
+				</div>	
+			</div>
+
+			<div class="form-group">
 				<div class="col-xs-10">
-					<label class="control-label" for="surgical_history">Antecedents Chirurgicaux:</label>  
+					<label class="control-label" for="surgical_history">Antécédents Chirurgicaux:</label>  
 					<textarea id="surgical_history" name="surgical_history" row="2" class="form-control"  >{{surgical_history}}</textarea>
 				</div>	
 			</div>
@@ -295,7 +300,7 @@
 
 		</div>
         <div class="page3">
-			<h2>Exemen Clinique:</h2>
+			<h2>Examen Clinique:</h2>
 			<div class="form-group">
 				<div class="col-xs-5">
 					<label class="control-label" for="CR_cardio">Cardiaque:</label>  
@@ -307,12 +312,6 @@
 				<div class="col-xs-5 clear-left">
 					<label class="control-label" for="CR_lung">Pulmonaire:</label>  
 					<input id="CR_lung" name="CR_lung" type="text" class="form-control" value="{{CR_lung}}" >
-				</div>	
-			</div>
-			<div class="form-group">
-				<div class="col-xs-5 clear-left">
-					<label class="control-label" for="CR_other">Autre:</label>  
-					<input id="CR_other" name="CR_other" type="text" class="form-control" value="{{CR_other}}" >
 				</div>	
 			</div>
 			<div class="form-group">
@@ -336,7 +335,7 @@
 			
 			<div class="form-group">
 				<div class="col-xs-10">
-					<label class="control-label" for="examination">Examens Complementaires:</label>  
+					<label class="control-label" for="examination">Examens Complémentaires:</label>  
 					<textarea id="examination" name="examination" row="2" class="form-control"  >{{examination}}</textarea>
 				</div>	
 			</div>
@@ -361,10 +360,16 @@
 					<textarea id="remarks" name="remarks" row="2" class="form-control">{{remarks}}</textarea>
 				</div>	
 			</div>
+			<div class="form-group">
+				<div class="col-xs-5 clear-left">
+					<label class="control-label" for="CR_other">Autre:</label>  
+					<input id="CR_other" name="CR_other" type="text" class="form-control" value="{{CR_other}}" >
+				</div>	
+			</div>
 			
 		</div>
-		<button class="btn btn-lg btn-primary col-xs-6" type="submit">Save</button>
-		<button class="btn btn-lg btn-cancel">Cancel</button>
+		<button class="btn btn-lg btn-primary col-xs-6" type="submit">Sauvegarder</button>
+		<button class="btn btn-lg btn-cancel">Annuler</button>
 		
 
 		</form>
