--- a/templates/ind.html
+++ b/templates/ind.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
-    <title>Dr signup page</title>
+    <title>La carte santé</title>
 
 
     <!-- Custom styles for this template -->
@@ -26,6 +26,10 @@
   </head>
 
   <body>
+	<div class="myhead">
+	  <img src="static/images/logo.png" height="50">
+		<a href="/logout">Déconnexion</a>
+	</div>
 
     <div class="container">
 
