changes version to 1-5 and small changes to the mobile view

--- a/templates/mobile.html
+++ b/templates/mobile.html
@@ -97,7 +97,7 @@ textarea {
 </style>
 <html>
 <body>
-<!--<div id="wrap"> -->
+<div id="wrap"> 
   
     <nav class="navbar navbar-default" role="navigation">
       <div class="navbar-header text-center">
@@ -123,7 +123,7 @@ textarea {
 			<label class="col-xs-3 label-name">Email:</label> <label class="col-xs-9 label-value">{{email}}</label> 
 			</div> -->
 			<div class="row">
-			<label class="col-xs-7 label-name"><span style="font-weight:bold">Personne à contacter (urgence)</span>:</label> <label class="col-xs-5 label-value">{{emergency_contact_name}}</label> 
+			<label class="col-xs-4 label-name"><span style="font-weight:bold">Personne à contacter</span>:</label> <label class="col-xs-8 label-value">{{emergency_contact_name}}</label> 
 			</div>
 		</div>
 	  </div>
@@ -135,7 +135,7 @@ textarea {
 			<label class="col-xs-4 label-name">Groupe Sanguin:</label> <label class="col-xs-8 label-value">{{blodTyoe}}</label> 
 			</div>
 			<div class="row">
-			<label class="col-xs-4 label-name"><span style="font-weight:bold">Médecin Référent Dr.</span>:</label> <label class="col-xs-8 label-value">{{ref_doctor_name}}</label> 
+			<label class="col-xs-4 label-name"><span style="font-weight:bold">Médecin</span>:</label> <label class="col-xs-8 label-value">{{ref_doctor_name}}</label> 
 			</div>
 		</div>
 	  </div>
@@ -217,6 +217,6 @@ textarea {
 	  </div>
 	</div>
 </div>
-<!--</div> -->
+</div> 
 </body>
 </html>
